2022-04-29  Jay Berkenbilt  <ejb@ql.org>

        * QPDFObjectHandle: for the methods insertItem, appendItem,
        eraseItem, replaceKey, and removeKey, have the methods return a
        reference to the original object, making a fluent interface to
        initializing or modifying QPDFObjectHandle possible. Also, for
        each one, add a corresponding "AndGet" method (insertItemAndGet,
        appendItemAndGet, eraseItemAndGet, replaceKeyAndGet, and
        removeKeyAndGet) that returns the newly inserted, replaced, or
        removed item. This makes it possible to create a new object, add
        it to an array or dictionary, and get a handle to it all in one
        line.

2022-04-24  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix: "removeAttachment" in the job JSON now takes an array
        of strings instead of a string. It should have taken an array of
        strings since the corresponding command-line argument,
        --remove-attachment, is repeatable. Fixes #693.

        * Deprecate QPDFObjectHandle::replaceOrRemoveKey -- it does and
        always has done the same thing as replaceKey.

2022-04-23  Jay Berkenbilt  <ejb@ql.org>

        * Add a new QPDF::warn method that takes the parameters of
        QPDFExc's constructor except for the filename, which is taken from
        the QPDF object. This is a shorter way to issue warnings on behalf
        of a QPDF object.

	* Add new method QUtil::is_explicit_utf8 that tests whether a
	string is explicitly marked as being UTF-8 encoded, as allowed by
	the PDF 2.0 spec. Such a string starts with the bytes 0xEF 0xBB
	0xBF, which is the UTF-8 encoding of U+FEFF.

	* Add new method QUtil::get_next_utf8_codepoint as a low-level
	helper for iterating through the UTF-8 characters in a byte
	string.

2022-04-16  Jay Berkenbilt  <ejb@ql.org>

	* Breaking CLI change: the default value for --json is now
	"latest" rather than "1". At this moment, "1" is the latest