@@ -1334,13 +1334,6 @@ QPDFObjectHandle::removeKeyAndGet(std::string const& key)
     return result;
 }
 
-void
-QPDFObjectHandle::replaceOrRemoveKey(
-    std::string const& key, QPDFObjectHandle const& value)
-{
-    replaceKey(key, value);
-}
-
 // Stream accessors
 QPDFObjectHandle
 QPDFObjectHandle::getDict()
